--- a/auxiliary/mnist-dcgan/src/index.html
+++ b/auxiliary/mnist-dcgan/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>MnistDcgan</title>
+  <title>MNIST DCGAN</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
